--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/tv_box"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerInParent="true"
+        android:background="@color/colorBackgound"
+        android:gravity="center"
+        android:textColor="@color/colorItemBackgound"
+        android:textSize="30sp"
+        android:visibility="gone" />
+
     <com.example.y.slideview.view.SlideView
         android:id="@+id/slide"
         android:layout_width="30dp"
